@startuml

entity users {
  *id : int <<PK>>
  --
  nickname : string
  email : string
  password : string
  created_at : datetime
  updated_at : datetime
}

entity diaries {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  title : string
  content : text
  emotion_state : string
  created_at : datetime
  updated_at : datetime
}

entity tags {
  *id : int <<PK>>
  --
  name : string
}

entity diary_tag {
  *diary_id : int <<FK>>
  *tag_id : int <<FK>>
}

entity emotion_logs {
  *id : int <<PK>>
  --
  diary_id : int <<FK>>
  emotion_state : string
  emotion_score : decimal
  created_at : datetime
}

entity unlocked_emotions {
  *id : int <<PK>>
  --
  user_id : int<<FK>>
  emotion_state : string
  diary_id : int<<FK>>
  unlocked_at : datetime
}

entity social_accounts {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  provider_name : string
  provider_id : string
  avatar : string
  email : string
  created_at : datetime
  updated_at : datetime
}

' リレーション定義
users ||--o{ diaries : ""
diaries ||--o{ emotion_logs : ""
users ||--o{ emotion_colors : ""
users ||--o{ social_accounts : ""
users ||--o{ UnlockedEmotion : ""

@enduml
